--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
           extend: {
             colors: {
               clifford: "#da373d",
+              lightBlue: "#C1DCDC",
               colorPrimary: "rgba(30, 30, 30, 1)",
               colorSecondary: "rgba(30, 30, 30, 0.5)",
             },
@@ -65,7 +66,7 @@
 
       <!-- Banner Section -->
       <section class="mt-12">
-        <div class="bg-[#C1DCDC] rounded-3xl flex">
+        <div class="bg-lightBlue rounded-3xl flex">
           <!-- text container -->
           <div class="pt-12 pl-12 mb-32">
             <h1 class="text-[4rem] font-extrabold text-black">
@@ -129,9 +130,51 @@
     </header>
 
     <main>
-      <section class="mt-12"></section>
+      <!-- Best Selling Plants -->
+      <section class="mx-auto max-w-screen-xl mt-24">
+        <div class="inline-flex gap-14">
+          <!-- Text Content -->
+          <div class="w-2/12">
+            <h2 class="text-[2rem] font-bold">Best Selling Plants</h2>
+            <p
+              class="text-colorSecondary text-lg font-medium mt-3 mb-6 w-11/12"
+            >
+              Easiest way to healthy life by buying your favorite plants
+            </p>
+            <button
+              class="text-lg font-medium bg-lightBlue px-6 py-3 rounded-lg"
+            >
+              See more <i class="fa-solid fa-arrow-right"></i>
+            </button>
+          </div>
+
+          <!-- Card Container -->
+          <div class="inline-flex gap-12">
+            <!-- Card 1 -->
+            <div>
+              <img class="rounded-xl" src="images/plant-1.png" alt="" />
+              <p class="text-lg font-medium mt-3 mb-2">Natural Plants</p>
+              <p class="text-colorSecondary text-lg font-medium">₱ 1,400.00</p>
+            </div>
+            <!-- Card 2 -->
+            <div>
+              <img class="rounded-xl" src="images/plant-2.png" alt="" />
+              <p class="text-lg font-medium mt-3 mb-2">Artificial Plants</p>
+              <p class="text-colorSecondary text-lg font-medium">₱ 900.00</p>
+            </div>
+            <!-- Card 3 -->
+            <div>
+              <img class="rounded-xl" src="images/plant-3.png" alt="" />
+              <p class="text-lg font-medium mt-3 mb-2">Artificial Plants</p>
+              <p class="text-colorSecondary text-lg font-medium">₱ 3,500.00</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      
     </main>
 
-    <footer></footer>
+    <footer class="mt-12"></footer>
   </body>
 </html>
