added about us section

--- a/index.html
+++ b/index.html
@@ -172,9 +172,66 @@
         </div>
       </section>
 
-      
+      <!-- About Us section -->
+      <section class="mx-auto max-w-screen-xl mt-28">
+        <!-- text container -->
+        <div class="text-center mb-12">
+          <h2 class="text-[2rem] font-bold mb-3">About Us</h2>
+          <p class="text-lg font-medium text-colorSecondary">
+            Order now and appreciate the beauty of nature
+          </p>
+        </div>
+
+        <!-- services container -->
+        <div class="flex gap-6">
+          <!-- service card 1 -->
+          <div class="flex flex-col items-center text-center w-[600px]">
+            <div
+              class="w-24 h-24 bg-lightBlue rounded-full flex justify-center items-center"
+            >
+              <img src="icons/about-1.png" alt="" />
+            </div>
+            <h3 class="text-black text-lg font-bold mt-6 mb-3">
+              Large Assortment
+            </h3>
+            <p class="text-colorSecondary text-lg font-medium">
+              we offer many different types of products with fewer variations in
+              each category.
+            </p>
+          </div>
+
+          <!-- service card 2 -->
+          <div class="flex flex-col items-center text-center w-[600px]">
+            <div
+              class="w-24 h-24 bg-lightBlue rounded-full flex justify-center items-center"
+            >
+              <img src="icons/about-1.png" alt="" />
+            </div>
+            <h3 class="text-black text-lg font-bold mt-6 mb-3">
+              Fast & Free Shipping
+            </h3>
+            <p class="text-colorSecondary text-lg font-medium">
+              4-day or less delivery time, free shipping and an expedited
+              delivery option.
+            </p>
+          </div>
+
+          <!-- service card 3 -->
+          <div class="flex flex-col items-center text-center w-[600px]">
+            <div
+              class="w-24 h-24 bg-lightBlue rounded-full flex justify-center items-center"
+            >
+              <img src="icons/about-1.png" alt="" />
+            </div>
+            <h3 class="text-black text-lg font-bold mt-6 mb-3">24/7 Support</h3>
+            <p class="text-colorSecondary text-lg font-medium">
+              answers to any business related inquiry 24/7 and in real-time.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
 
-    <footer class="mt-12"></footer>
+    <footer class="mt-56"></footer>
   </body>
 </html>
