added categories section

--- a/index.html
+++ b/index.html
@@ -230,6 +230,52 @@
           </div>
         </div>
       </section>
+
+      <!-- Catagories -->
+      <section class="mt-40">
+        <div>
+          <!-- Title & Description -->
+          <div class="text-center">
+            <h1 class="text-[2rem] font-bold mb-3">Categories</h1>
+            <p class="text-colorSecondary font-medium text-lg">
+              Find what you are looking for
+            </p>
+          </div>
+
+          <div class="relative h-[841px] bg-lightBlue mt-24">
+            <!-- card container -->
+            <div class="text-center">
+              <!-- card 1 -->
+              <div class="absolute -top-12 left-[5%] 2xl:left-[12%]">
+                <img src="images/plant-4.png" alt="" />
+                <h3 class="text-lg font-bold mt-3">Natural Plants</h3>
+              </div>
+
+              <!-- Card middle -->
+              <div class="absolute top-12 left-[37.5%] 2xl:left-[40%]">
+                <img src="images/plant-5.png" alt="" />
+                <h3 class="text-lg font-bold mt-3">Plant Accessories</h3>
+                <p
+                  class="text-colorSecondary text-lg font-medium w-[352px] mt-3 mb-6"
+                >
+                  Horem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+                <button
+                  class="text-lg font-medium bg-white px-6 py-3 rounded-lg"
+                >
+                  Explore <i class="fa-solid fa-arrow-right"></i>
+                </button>
+              </div>
+
+              <!-- card 3 -->
+              <div class="absolute -top-12 right-[5%] 2xl:right-[12%]">
+                <img src="images/plant-6.png" alt="" />
+                <h3 class="text-lg font-bold mt-3">Artificial Plants</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="mt-56"></footer>
