--- a/index.html
+++ b/index.html
@@ -278,6 +278,72 @@
       </section>
     </main>
 
-    <footer class="mt-56"></footer>
+    <footer class="mt-56 bg-lightBlue">
+      <div
+        class="mx-auto max-w-screen-xl py-12 flex justify-between place-items-center"
+      >
+        <!-- left -->
+        <div>
+          <div class="w-48">
+            <h3 class="font-Quella text-black font-normal text-lg">
+              GREENMIND
+            </h3>
+            <p class="text-lg text-colorSecondary font-medium my-6">
+              We help you find your dream plant
+            </p>
+            <!-- socials -->
+            <div
+              class="grid grid-cols-3 justify-center place-items-center gap-6"
+            >
+              <i
+                class="fa-brands fa-facebook-f p-4 border border-colorSecondary rounded-full"
+              ></i>
+              <i
+                class="fa-brands fa-instagram p-4 border border-colorSecondary rounded-full"
+              ></i>
+              <i
+                class="fa-brands fa-twitter p-4 border border-colorSecondary rounded-full"
+              ></i>
+            </div>
+          </div>
+          <p class="mt-24 text-lg text-colorSecondary font-medium">
+            &copy; 2024 All Right Reserved Term of use GREENMIND
+          </p>
+        </div>
+
+        <!-- right -->
+        <div class="flex gap-12">
+          <!-- container 1 -->
+          <div class="flex flex-col gap-6">
+            <a class="text-lg font-bold" href="">Information</a>
+            <a class="text-lg font-normal text-colorSecondary" href="">About</a>
+            <a class="text-lg font-normal text-colorSecondary" href=""
+              >Product</a
+            >
+            <a class="text-lg font-normal text-colorSecondary" href="">Blog</a>
+          </div>
+
+          <!-- Container 2 -->
+          <div class="flex flex-col gap-6">
+            <a class="text-lg font-bold" href="">Company</a>
+            <a class="text-lg font-normal text-colorSecondary" href="">Community  </a>
+            <a class="text-lg font-normal text-colorSecondary" href=""
+              >Career</a
+            >
+            <a class="text-lg font-normal text-colorSecondary" href="">Our story</a>
+          </div>
+
+          <!-- Container 3 -->
+          <div class="flex flex-col gap-6">
+            <a class="text-lg font-bold" href="">Contact</a>
+            <a class="text-lg font-normal text-colorSecondary" href="">Getting Started</a>
+            <a class="text-lg font-normal text-colorSecondary" href=""
+              >Pricing</a
+            >
+            <a class="text-lg font-normal text-colorSecondary" href="">Resources</a>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
