added horizontal scroll

--- a/index.html
+++ b/index.html
@@ -48,6 +48,27 @@
       rel="stylesheet"
     />
     <link href="https://fonts.cdnfonts.com/css/quella" rel="stylesheet" />
+
+    <!-- custom css -->
+    <style>
+      @keyframes scroll {
+        0% {
+          transform: translateX(0);
+        }
+
+        100% {
+          transform: translateX(-100%);
+        }
+      }
+
+      .overflow-hidden {
+        overflow: hidden;
+      }
+
+      .animate-scroll {
+        animation: scroll 20s linear infinite;
+      }
+    </style>
   </head>
   <body class="font-Poppins text-colorPrimary">
     <header class="mx-auto max-w-screen-xl mt-12">
@@ -315,84 +336,157 @@
       <section class="pt-24 pb-[230px] relative overflow-x-hidden">
         <div class="mx-auto max-w-screen-xl">
           <!-- title container -->
-          <div class="flex justify-between items-center">
+          <div class="flex justify-between items-center mb-10">
             <h1 class="text-[32px] font-bold w-[40%] 2xl:w-2/6">
               What customers say about GREEMIND?
             </h1>
             <img src="icons/vector_dots.png" alt="" />
           </div>
 
-          <!-- cards container -->
-          <div class="mt-12">
-            <!-- card 1 -->
-            <div
-              class="w-[800px] h-[330px] bg-lightBlue rounded-xl p-12 relative"
-            >
-              <p class="text-lg font-medium text-colorTartiary">
-                Jorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                vulputate libero et velit interdum, ac aliquet odio mattis.
-                Class aptent taciti sociosqu ad litora torquent per conubia
-                nostra, per inceptos himenaeos.
-              </p>
-              <img
-                class="absolute bottom-[101px] left-[48px]"
-                src="icons/vector_quote.png"
-                alt=""
-              />
-              <img
-                class="absolute bottom-0 left-[13px]"
-                src="images/reviewer-1.png"
-                alt=""
-              />
-              <!-- designation -->
-              <div class="absolute bottom-[102px] left-[170px]">
-                <h2 class="text-colorPrimary text-lg font-bold">John Doe</h2>
-                <small class="text-colorSecondary text-xs font-medium"
-                  >Youtuber</small
-                >
-              </div>
-              <!-- rating -->
+          <!-- horizontal scroll -->
+          <div class="overflow-hidden relative">
+            <div class="flex animate-scroll gap-24">
+              <!-- card 1 -->
               <div
-                class="absolute right-12 bottom-[120px] text-colorPrimary text-lg font-bold"
+                class="w-[800px] h-[330px] bg-lightBlue rounded-xl p-12 relative"
+                style="flex: 0 0 auto"
               >
-                <i class="fa-solid fa-star"></i> 4.5
+                <p class="text-lg font-medium text-colorTartiary">
+                  Jorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                  vulputate libero et velit interdum, ac aliquet odio mattis.
+                  Class aptent taciti sociosqu ad litora torquent per conubia
+                  nostra, per inceptos himenaeos.
+                </p>
+                <img
+                  class="absolute bottom-[101px] left-[48px]"
+                  src="icons/vector_quote.png"
+                  alt=""
+                />
+                <img
+                  class="absolute bottom-0 left-[13px]"
+                  src="images/reviewer-1.png"
+                  alt=""
+                />
+                <!-- designation -->
+                <div class="absolute bottom-[102px] left-[170px]">
+                  <h2 class="text-colorPrimary text-lg font-bold">John Doe</h2>
+                  <small class="text-colorSecondary text-xs font-medium"
+                    >Youtuber</small
+                  >
+                </div>
+                <!-- rating -->
+                <div
+                  class="absolute right-12 bottom-[120px] text-colorPrimary text-lg font-bold"
+                >
+                  <i class="fa-solid fa-star"></i> 4.5
+                </div>
+              </div>
+              <!-- card 2 -->
+              <div
+                class="w-[800px] h-[330px] bg-lightBlue rounded-xl p-12 relative"
+                style="flex: 0 0 auto"
+              >
+                <p class="text-lg font-medium text-colorTartiary">
+                  Jorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                  vulputate libero et velit interdum, ac aliquet odio mattis.
+                  Class aptent taciti sociosqu ad litora torquent per conubia
+                  nostra, per inceptos himenaeos.
+                </p>
+                <img
+                  class="absolute bottom-[101px] left-[48px]"
+                  src="icons/vector_quote.png"
+                  alt=""
+                />
+                <img
+                  class="absolute bottom-0 left-[13px]"
+                  src="images/reviewer-2.png"
+                  alt=""
+                />
+                <!-- designation -->
+                <div class="absolute bottom-[102px] left-[170px]">
+                  <h2 class="text-colorPrimary text-lg font-bold">John Doe</h2>
+                  <small class="text-colorSecondary text-xs font-medium"
+                    >Youtuber</small
+                  >
+                </div>
+                <!-- rating -->
+                <div
+                  class="absolute right-12 bottom-[120px] text-colorPrimary text-lg font-bold"
+                >
+                  <i class="fa-solid fa-star"></i> 4.5
+                </div>
+              </div>
+              <!-- card 3 -->
+              <div
+                class="w-[800px] h-[330px] bg-lightBlue rounded-xl p-12 relative"
+                style="flex: 0 0 auto"
+              >
+                <p class="text-lg font-medium text-colorTartiary">
+                  Jorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                  vulputate libero et velit interdum, ac aliquet odio mattis.
+                  Class aptent taciti sociosqu ad litora torquent per conubia
+                  nostra, per inceptos himenaeos.
+                </p>
+                <img
+                  class="absolute bottom-[101px] left-[48px]"
+                  src="icons/vector_quote.png"
+                  alt=""
+                />
+                <img
+                  class="absolute bottom-0 left-[13px]"
+                  src="images/reviewer-1.png"
+                  alt=""
+                />
+                <!-- designation -->
+                <div class="absolute bottom-[102px] left-[170px]">
+                  <h2 class="text-colorPrimary text-lg font-bold">John Doe</h2>
+                  <small class="text-colorSecondary text-xs font-medium"
+                    >Youtuber</small
+                  >
+                </div>
+                <!-- rating -->
+                <div
+                  class="absolute right-12 bottom-[120px] text-colorPrimary text-lg font-bold"
+                >
+                  <i class="fa-solid fa-star"></i> 4.5
+                </div>
+              </div>
+              <!-- card 4 -->
+              <div
+                class="w-[800px] h-[330px] bg-lightBlue rounded-xl p-12 relative"
+                style="flex: 0 0 auto"
+              >
+                <p class="text-lg font-medium text-colorTartiary">
+                  Jorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                  vulputate libero et velit interdum, ac aliquet odio mattis.
+                  Class aptent taciti sociosqu ad litora torquent per conubia
+                  nostra, per inceptos himenaeos.
+                </p>
+                <img
+                  class="absolute bottom-[101px] left-[48px]"
+                  src="icons/vector_quote.png"
+                  alt=""
+                />
+                <img
+                  class="absolute bottom-0 left-[13px]"
+                  src="images/reviewer-2.png"
+                  alt=""
+                />
+                <!-- designation -->
+                <div class="absolute bottom-[102px] left-[170px]">
+                  <h2 class="text-colorPrimary text-lg font-bold">John Doe</h2>
+                  <small class="text-colorSecondary text-xs font-medium"
+                    >Youtuber</small
+                  >
+                </div>
+                <!-- rating -->
+                <div
+                  class="absolute right-12 bottom-[120px] text-colorPrimary text-lg font-bold"
+                >
+                  <i class="fa-solid fa-star"></i> 4.5
+                </div>
               </div>
             </div>
-          </div>
-        </div>
-
-        <!-- card 2 -->
-        <div
-          class="absolute left-[944px] 2xl:left-[1200px] top-[240px] w-[800px] h-[330px] bg-lightBlue rounded-xl p-12"
-        >
-          <p class="text-lg font-medium text-colorTartiary">
-            Jorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-            vulputate libero et velit interdum, ac aliquet odio mattis. Class
-            aptent taciti sociosqu ad litora torquent per conubia nostra, per
-            inceptos himenaeos.
-          </p>
-          <img
-            class="absolute bottom-[101px] left-[48px]"
-            src="icons/vector_quote.png"
-            alt=""
-          />
-          <img
-            class="absolute bottom-0 left-[13px]"
-            src="images/reviewer-2.png"
-            alt=""
-          />
-          <!-- designation -->
-          <div class="absolute bottom-[102px] left-[170px]">
-            <h2 class="text-colorPrimary text-lg font-bold">John Doe</h2>
-            <small class="text-colorSecondary text-xs font-medium"
-              >Youtuber</small
-            >
-          </div>
-          <!-- rating -->
-          <div
-            class="absolute right-12 bottom-[120px] text-colorPrimary text-lg font-bold"
-          >
-            <i class="fa-solid fa-star"></i> 4.5
           </div>
         </div>
       </section>
@@ -475,3 +569,17 @@
     </footer>
   </body>
 </html>
+
+<!-- Horizontal Scroll -->
+<script>
+  // reviews
+  const menu = document.querySelector(".animate-scroll");
+
+  menu.addEventListener("mouseover", () => {
+    menu.style.animationPlayState = "paused";
+  });
+
+  menu.addEventListener("mouseout", () => {
+    menu.style.animationPlayState = "running";
+  });
+</script>
